@@ -1,3 +1,8 @@
+2005-07-04  Christian Schaller  <uraeus@gnome.org>
+
+	* configure.in:
+	* src/backend/bacon-video-widget-gst.c: fix include statements
+
 2005-06-23  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
 	* src/totem.c: (totem_callback_connect):
